// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Label Date Label Date 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      NaN years
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-85"
        title="Invalid Date"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Date Label Number 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      NaN years
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-83"
        title="Invalid Date"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Date Label String 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      2 months
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-81"
        title="12/17/2020, 12:00:00 AM"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M19 19H5V8h14m-3-7v2H8V1H6v2H5c-1.11 0-2 .89-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2h-1V1m-1 11h-5v5h5v-5z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Header Label 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <p
        class="MuiTypography-root makeStyles-label-87 MuiTypography-body1 MuiTypography-displayInline"
      >
        name
      </p>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <p
          class="MuiTypography-root makeStyles-value-86 MuiTypography-body1"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Header Label Tool Tip 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column MuiGrid-align-items-xs-center"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <p
        class="MuiTypography-root makeStyles-label-89 MuiTypography-body1 MuiTypography-displayInline"
      >
        name
      </p>
      <div
        class="MuiContainer-root makeStyles-container-90 MuiContainer-maxWidthLg"
      >
        <svg
          class=""
          focusable="false"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          title="tooltip"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
    <div
      class="MuiGrid-root MuiGrid-container MuiGrid-item MuiGrid-align-items-xs-center MuiGrid-justify-xs-center"
    >
      <div
        class="MuiGrid-root MuiGrid-item"
      >
        <p
          class="MuiTypography-root makeStyles-value-88 MuiTypography-body1"
        >
          value
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Hover Info Label 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      Some label
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-93"
        title="hover info"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Hover Info Label Info 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-1"
  >
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      Some label
    </div>
    <div
      class="MuiGrid-root MuiGrid-item"
    >
      <div
        class="MuiBox-root MuiBox-root-95"
      >
        <svg
          focusable="false"
          height="1rem"
          preserveAspectRatio="xMidYMid meet"
          style="transform: rotate(360deg);"
          viewBox="0 0 24 24"
          width="1rem"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M11 9h2V7h-2m1 13c-4.41 0-8-3.59-8-8s3.59-8 8-8s8 3.59 8 8s-3.59 8-8 8m0-18A10 10 0 0 0 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m-1 15h2v-6h-2v6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Info Label 1`] = `
<div
  id="root"
>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 MuiGrid-item MuiGrid-align-items-xs-flex-start"
  >
    <div
      class="MuiGrid-root makeStyles-nameLabelItem-97 MuiGrid-item MuiGrid-grid-xs-true"
    >
      <span
        class="MuiTypography-root makeStyles-nameLabel-96 MuiTypography-body1"
      >
        name
      </span>
       
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
    >
      <span
        class="MuiTypography-root makeStyles-valueLabel-98 MuiTypography-body1"
      >
        value
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots Label Name Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root makeStyles-nameLabel-100 MuiTypography-body1"
  >
    A name label
  </span>
</div>
`;

exports[`Storyshots Label Status Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root makeStyles-statusLabel-107  MuiTypography-body1"
    style="background-color: rgb(232, 245, 233); color: rgb(76, 175, 80);"
  >
    status
  </span>
</div>
`;

exports[`Storyshots Label Value Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root makeStyles-valueLabel-110 MuiTypography-body1"
  >
    A ValueLabel is here
  </span>
</div>
`;

exports[`Storyshots Label/ValueLabel Value Label 1`] = `
<div
  id="root"
>
  <span
    class="MuiTypography-root makeStyles-valueLabel-110 MuiTypography-body1"
  >
    A ValueLabel is here
  </span>
</div>
`;
